Fix project grid width on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -723,6 +723,8 @@ input:checked+.slider:before {
 
   .grid {
     grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+    max-width: 100vw;
+    padding: 0 25px;
   }
 
   .grid_item {
